--- a/web/templates/sidemenu.html
+++ b/web/templates/sidemenu.html
@@ -45,6 +45,16 @@
                 </md-sidemenu-button>
             </md-sidemenu-content>
 
+            <md-sidemenu-content
+                    md-heading="{{ ::'INSPECTOR_MOUSE' | translate }}"
+                    md-arrow="true"
+            >
+                <md-sidemenu-button href="#/inspector/mouse/path">
+                    <span>{{ ::'INSPECTOR_MOUSE_PATH' | translate }}</span>
+                </md-sidemenu-button>
+
+            </md-sidemenu-content>
+
         </md-sidemenu-content>
     </md-sidemenu-group>
 
