--- a/web/templates/ui-component/cards/progress-card.html
+++ b/web/templates/ui-component/cards/progress-card.html
@@ -13,7 +13,7 @@
                                   md-diameter="130"
                                   value="{{ vm.progress }}"
             ></md-progress-circular>
-            <span>{{ vm.model || vm.progress || 0 }} {{ vm.unit }}</h1>
+            <span>{{ vm.model || vm.progress || 0 }} {{ vm.unit }}</span>
         </div>
     </md-card-content>
 </md-card>
