Show 401 page if user has no rights to some interface.

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -260,3 +260,22 @@ img.user-img.ng-hide {
 md-card-title-text div {
     cursor: pointer;
 }
+
+#unauthorized_wiggle_smiley {
+    animation: wave 1s infinite;
+    font-size: 50px;
+}
+
+@keyframes wave {
+    0% {
+        transform: rotate(100deg);
+    }
+
+    50% {
+        transform: rotate(85deg);
+    }
+
+    100% {
+        transform: rotate(100deg);
+    }
+}
