Implement some ui settings based ui modification (hide elements due to the user rights etc.)

--- a/web/templates/appsettings/permissions/index.html
+++ b/web/templates/appsettings/permissions/index.html
@@ -43,7 +43,7 @@
                         >
                             <td md-cell>{{ ::permission.name }}</td>
                             <td md-cell data-ng-repeat="user in vm.usersPermissions" class="text-center">
-                                <md-checkbox data-ng-model="user.permissions[permission.name]"></md-checkbox>
+                                <md-checkbox aria-label="{{ ::'HAS_RIGHT' | translate }}" data-ng-model="user.permissions[permission.name]"></md-checkbox>
                             </td>
                         </tr>
                         </tbody>
