--- a/web/templates/graph/index.html
+++ b/web/templates/graph/index.html
@@ -31,8 +31,7 @@
                     data-label="{{ ::'CHART_TYPE' | translate }}"
             ></generic-filter>
 
-            <span flex></span>
-
+            <!-- Disable saved search settings for now
             <generic-filter
                     data-ng-model="vm.setting"
                     data-collection="vm.settings"
@@ -46,9 +45,8 @@
             >
                 <md-icon>settings</md-icon>
             </md-button>
-        </md-content>
+            -->
 
-        <md-content layout="row">
             <generic-filter
                     data-ng-model="vm.graph.scale"
                     data-collection="vm.scales"
@@ -56,7 +54,9 @@
                     data-action="filters/timescale"
                     data-label="{{ ::'SCALE_SELECT' | translate }}"
             ></generic-filter>
+        </md-content>
 
+        <md-content layout="row">
             <date-time-range-input
                 data-start-date-time="vm.graph.startDateTime"
                 data-end-date-time="vm.graph.endDateTime"
